--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
   "devDependencies": {
     "dotenv": "^16.0.0",
     "husky": "^8.0.1",
-    "jest-sorted": "^1.0.14",
-    "pg": "^8.7.3"
+    "jest-sorted": "^1.0.14"
   },
   "jest": {
     "setupFilesAfterEnv": [
